--- a/login.html
+++ b/login.html
@@ -123,7 +123,7 @@
 
     <!-- Botones parte superior izquierda -->
     <div class="top-left">
-        <button class="text-button" onclick="window.location.href='login.html';">
+        <button class="text-button" onclick="window.location.href='index.html';">
             Cerrar sesión
         </button>
         <button class="text-button" onclick="window.location.href='sabermas.html';">
